# ywg-ptn-analysis-4710-g11

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: gtfs_feeds.yaml
data/exports/: neighbourhood_analysis.parquet  neighbourhoods.geojson  route_analysis.parquet  stops.geojson
data/interim/: wpg_transit.duckdb
data/processed/: wpg_transit.duckdb  wpg_transit_serving.duckdb
data/raw/: 8k6x-xxsy.geojson  bv6q-du26.csv  bv6q-du26.geojson  gfvw-fk34.geojson  gp3k-am4u.csv  gp3k-am4u.geojson  jdeq-xf3y.geojson  kjd9-dvf5.geojson  mer2-irmb.csv  mer2-irmb.geojson
data/raw/gtfs/: agency.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  fare_rules.txt  feed_info.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
docs/: CLAIMS_SHEET.md  FIGURE_QA_CHECKLIST.md  FIGURE_QA_FINAL.md  FINAL_HANDOFF.md  TEAM_HANDOFF.md  meeting_2026-03-24.md  pr2_ideas.md
docs/pr2/: FIGURE_STYLE_GUIDE.md  FINAL_REPORT_IDEAS.md  PR2_TEAM_PLAN.tex  evidence_map.csv  figure_registry.csv  metric_dictionary.csv
models/production/: coverage_classifier_v1.pkl  neighbourhood_clusters_v1.pkl  passup_nb_v1.pkl  route_clusters_v1.pkl  tier_classifier_v1.pkl
notebooks/: 0.0-ahmed-methodology.ipynb  0.1-ahmed-pr2-comparison.ipynb  0.2-ahmed-pr2-clustering.ipynb  0.3-ahmed-pr2-classification.ipynb  0.4-ahmed-pr2-capacity.ipynb  0.5-ahmed-final-association.ipynb  0.6-ahmed-final-evaluation.ipynb  0.7-ahmed-final-poverty.ipynb  1.0-cathy-network.ipynb  1.1-sudipta-coverage.ipynb  1.2-cathy-pr2-network.ipynb  1.3-sudipta-pr2-coverage.ipynb  1.4-sudipta-final-equity.ipynb  2.0-stephenie-viz.ipynb  2.1-stephenie-pr2-viz.ipynb
ptn_analysis/: __init__.py  __main__.py  app.py  config.py  validate.py
ptn_analysis/analysis/: __init__.py  base.py  coverage.py  equity.py  frequency.py  mining.py  network.py  visualization.py
ptn_analysis/context/: __init__.py  config.py  db.py  exports.py  http.py  reporting.py  serving.py
ptn_analysis/data/: __init__.py  builders.py  db.py  ingest.py  ingest_gtfs.py  ingest_open_data.py  ingest_shared.py  live_transit.py  loaders.py  make_dataset.py  pipeline.py  quality.py  schemas.py  transform.py
ptn_analysis/data/sources/: __init__.py  census.py  common.py  employment.py  gtfs.py  mobility_data.py  open_data.py  routing.py  transit_api.py
ptn_analysis/data/sql/: build_edges.sql  build_weighted_edges.sql  coverage_aggs.sql  indexes.sql  materialize_active_trips.sql  performance_views.sql  reference_tables.sql  route_summary_aggs.sql  schema.sql  views.sql  views_core.sql  views_equity.sql  views_mobility.sql
references/: data_sources.md
reports/figures/: bottom10_neighbourhoods_by_stops.csv  underserved_neighbourhoods_bottom25.csv
reports/figures/coverage_reports/: bottom10_neighbourhoods_by_stops.csv  community_coverage_comparison.csv  coverage_outliers_iqr.csv  top10_neighbourhoods_by_stops.csv  underserved_neighbourhoods_bottom25.csv
reports/final/: main.tex
reports/pr1/: main.tex
reports/pr2/: main.tex
tests/: test_db.py  test_equity.py  test_gtfs_manifest.py  test_http.py  test_mining.py  test_quality.py  test_smoke.py
