[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ptn_analysis"
version = "0.0.1"
description = "Network Analysis of Winnipeg's 2025 Primary Transit Network - COMP 4710 Group 11"
authors = [
  { name = "Group 11 (COMP 4710)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "typer",
    "duckdb>=0.9.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "networkx>=3.2.0",
    "python-louvain>=0.16",
    "peartree>=0.6.4",
    "gtfs-segments>=2.1.2",
    "osmnx>=2.0",
    "movingpandas>=0.22",
    "gtfs-kit>=12.0",
    "gtfs-functions>=2.7.0",
    "r5py>=0.3",
    "httpx>=0.26.0",
    "sodapy>=2.2.0",
    "streamlit>=1.30.0",
    "keplergl>=0.3.0",
    "streamlit-keplergl>=0.3.0",
    "pandera>=0.18.0",
    "python-dotenv",
    "pip",
    "ruff",
    "mkdocs",
    "pre-commit",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["ptn_analysis"]
include = ["pyproject.toml", "ptn_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["ptn_analysis"]
force-sort-within-sections = true
