[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ptn_analysis"
version = "0.0.1"
description = "Network Analysis of Winnipeg's 2025 Primary Transit Network - COMP 4710 Group 11"
requires-python = ">=3.11"
authors = [
  { name = "Group 11 (COMP 4710)" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "duckdb~=1.4.4",
    "duckdb-engine~=0.17.0",
    "sqlalchemy~=2.0.46",
    "pandas>=2.2,<3",
    "numpy>=2.0,<3",
    "geopandas~=1.1.2",
    "networkx~=3.5",
    "httpx~=0.28.1",
    "typer~=0.24.1",
    "tqdm~=4.67.1",
    "python-dotenv~=1.2.2",
    "loguru~=0.7.3",
    "rich~=14.3.2",
    "gtfs-kit~=12.0.2",
    "gtfs-segments==2.1.7",
    "matplotlib~=3.10.8",
    "scikit-learn~=1.7.2",
    "seaborn~=0.13.2",
    "pyarrow>=19.0.1",
    "statsmodels>=0.14,<1",
    "r5py~=1.1.2",
    "city2graph>=0.2.4,<1",
    "esda>=2.8,<3",
    "osmnx>=2.1,<3",
]

[project.optional-dependencies]
dashboard = [
    "streamlit~=1.55.0",
    "pydeck>=0.9,<1",
]
reports = [
    "papermill~=2.7.0",
    "contextily~=1.7.0",
]
notebooks = [
    "notebook~=7.5.3",
    "jupyterlab~=4.5.5",
    "ipython>=8,<10",
]

[tool.ruff]
line-length = 99
src = ["ptn_analysis"]
include = ["pyproject.toml", "ptn_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = [
    "D105",  # magic methods (__repr__, __str__, __len__) don't need docstrings
    "D107",  # __init__ docstrings optional when class docstring is present
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"notebooks/**/*.py" = ["D"]
"ptn_analysis/app.py" = ["D102", "D103"]
"ptn_analysis/data/serving.py" = ["D102", "D103"]

[tool.ruff.lint.isort]
known-first-party = ["ptn_analysis"]
force-sort-within-sections = true

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a populated DuckDB (deselect with -m 'not integration')",
]

[dependency-groups]
dev = [
    "ruff~=0.15.5",
    "pre-commit~=4.5.1",
    "pytest~=9.0.2",
]
